--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,15 +1,49 @@
 /********************************************************** custom defaults */
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color: #000;
 }
 
 body {
   cursor: default;
+  font-family: 'Comfortaa', cursive, Arial, Helvetica, sans-serif;
 }
 
 a {
   list-style: none;
   text-decoration: none;
 }
+
+/********************************************************** nav bar */
+.nav-bar {
+  background-color: #fff2df;
+  width: 100%;
+  height: 6rem;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.nav-bar a {
+    font-weight: bolder;
+    font-size: 2rem;
+}
+
+.nav-bar a:hover{
+    color: #674d3c;
+    text-decoration: underline;
+}
+
+.nav-bar .order-btn {
+    background-color: #a2836e;
+    padding: 1rem;
+    border-radius: 1rem;
+}
+
+.nav-bar .order-btn:hover{background-color:#d9ad7c;}
+
+/* colours to use: #fff2df, #d9ad7c, #a2836e, #674d3c */
