--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,7 +5,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  color: #000;
+  color: #100c08;
 }
 
 body {
@@ -13,6 +13,10 @@ body {
   font-family: "Comfortaa", cursive, Arial, Helvetica, sans-serif;
   position: relative;
   padding-bottom: 100%;
+}
+
+main {
+  margin-top: 7rem;
 }
 
 a {
@@ -31,9 +35,16 @@ a {
   width: 100%;
   font-size: 1.5rem;
   font-weight: bolder;
+  position: fixed;
+  top: 0;
+}
+/********************************************************** carousel */
+.carousel h1 {
+  font-size: 2rem;
+  text-align: center;
+  margin-bottom: 1rem;
 }
 
-/********************************************************** home page */
 .burger-pic img {
   width: 10rem;
   height: 10rem;
