--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,6 +13,7 @@ body {
   font-family: "Comfortaa", cursive, Arial, Helvetica, sans-serif;
   position: relative;
   padding-bottom: 100%;
+  text-align: center;
 }
 
 main {
@@ -31,23 +32,33 @@ a {
   justify-content: space-evenly;
   background-color: #ffff31;
   padding: 2rem;
-  text-align: center;
   width: 100%;
   font-size: 1.5rem;
   font-weight: bolder;
   position: fixed;
   top: 0;
 }
-/********************************************************** carousel */
-.carousel h1 {
+/********************************************************** main */
+
+.title h1 {
   font-size: 2rem;
-  text-align: center;
   margin-bottom: 1rem;
 }
 
+.main {
+  display: grid;
+  grid-template-columns: auto;
+  grid-gap: 1rem;
+  justify-content: center;
+  align-items: baseline;
+  justify-items: end;
+}
+
 .burger-pic img {
-  width: 10rem;
+  width: 14rem;
   height: 10rem;
+  border: #fcffa4 solid 0.5rem;
+  border-radius: 1rem;
 }
 
 /********************************************************** footer */
@@ -63,16 +74,16 @@ a {
 }
 
 .footer-nav a {
-  text-align: center;
   font-size: 1rem;
-}
-
-.footer-nav a i,
-.footer-nav a p {
   color: #f8f4ff;
 }
 
-.footer-nav a i:hover,
-.footer-nav a p:hover {
+.footer-nav a p,
+.footer-nav a i {
+  color: #f8f4ff;
+}
+
+.footer-nav a p:hover,
+.footer-nav a i:hover {
   color: #ffff31;
 }
