--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,7 +12,7 @@ body {
   cursor: default;
   font-family: "Comfortaa", cursive, Arial, Helvetica, sans-serif;
   position: relative;
-  padding-bottom: 100%;
+  padding-bottom: 50%;
   text-align: center;
 }
 
@@ -59,6 +59,24 @@ a {
   height: 10rem;
   border: #fcffa4 solid 0.5rem;
   border-radius: 1rem;
+}
+
+.order-btn {
+  outline: none;
+  margin-top: 2rem;
+  font-size: 1rem;
+  padding: 1rem;
+  border-radius: 1rem;
+  border: #fcffa4 solid 1rem;
+  cursor: pointer;
+  background-color: #ffff31;
+  font-family: "Comfortaa", cursive, Arial, Helvetica, sans-serif;
+}
+
+.order-btn:hover {
+  border: #fcffa4 solid 1rem;
+  font-size: 1.5rem;
+  font-weight: bold;
 }
 
 /********************************************************** footer */
